<resources>
    <string name="app_name">VOC</string>
    <string name="coin_read">按住清晰、语速均匀说出以上口令获取VOC币\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="your_rank">你所在的排名是：\n</string>
    <string name="coin_read2">上滑可以取消</string>
    <string name="rank">排行榜TOP</string>
    <string name="voice_link">语音链</string>
    <string name="info">&#160;&#160;VOC语音链致力于打造世界领先的语音人工智能训练系统。\n&#160;&#160;打破长久以来语音AI，识别率低，理解力差，缺乏小语种数据库等缺陷。\n&#160;&#160;加入语音链的AI训练师通过自己的声音完善数据库，同时得到语音链的token。\n&#160;&#160;VOC将为步入语音人工智能时代的各大企业，提供全球化语音AI解决方案。随着数据库的丰富，VOC的价值会愈加增长，成为各方接入语音人工智能时代的通信证。</string>
    <string name="info_guide">请摁下键，跟随屏幕中间出现的蓝色字，开始训练师的旅程吧！</string>
    <string name="mobile_input">绑定手机号&#160;&#160;&#160;(登录)</string>
    <string name="email_input">绑定邮箱&#160;&#160;&#160;(登录)</string>
    <string name="copy">点击复制，邀请好友得100枚voc！</string>
    <string name="copy_into">点击保存图片到相册</string>
    <string name="offical_name">公共号：vocalchain</string>
    <string name="input_true">请保证输入正确</string>
    <string name="remember">请务必牢记</string>
    <string name="input_invite_code">邀请码（选填）</string>
    <string name="info_hint">注意：  请务必牢记账号和密码\n否则将无法找回账户和挖币数据</string>
    <string name="seven_register">7秒注册，开始挖矿！</string>
    <string name="login_id">登录地址：%1s</string>
    <string name="invite_code">邀请码：%1d</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="invite_text">邀请您加入VOC语音链参与共建全球语音库,邀请码:%1d,输入邀请码有100C币可以拿哦,赶快加入吧~https://www.pgyer.com/cCvg</string>
    <string name="info_coin">挖币说明</string>
    <string name="my_own">我的总资产</string>
    <string name="voice_coin">语音挖币</string>
    <string name="task_coin">任务挖矿</string>
    <string name="message_code">短信验证</string>
    <string name="news">最新资讯</string>
    <string name="gift_up">上榜即可获得 </string>
    <string name="gift_up2"> 287 </string>
    <string name="gift_up3"> VOC奖励</string>
    <string name="user_info">个人中心</string>
    <string name="login_now">立即登录</string>
    <string name="my_assets">我的资产</string>
    <string name="login_see">登录后可见</string>
    <string name="basic_target">基础任务</string>
    <string name="super_target">超级任务</string>
    <string name="more">更多</string>
    <string name="reflect">提现</string>
    <string name="reset_pwd">重置支付密码</string>
    <string name="invite">邀请好友</string>
    <string name="to_invite">去邀请</string>
    <string name="join_home">加入社区</string>
    <string name="focus_common_code">关注公众号</string>
    <string name="to_join">去加入</string>
    <string name="to_focus">去关注</string>
    <string name="coin_rule">挖币规则</string>
    <string name="have_coin">已挖矿</string>
    <string name="join_community">加入社区</string>
    <string name="community_text">加入 VOC 社区\n\n即可领取 287 V币</string>
    <string name="focus_text">关注 VOC 微信公众号\n\n即可领取 287 V币</string>
    <string name="dang_ri">(当日获得的币从第二日零点开始平均解锁)</string>
    <string name="join_step">1.在微信中扫描下面二维码，进入VOC微信群\n\n2.进入微信群的群公告中，获得6位数字验证码\n\n3.在下方输入验证码，提交成功后即可领取VOC</string>
    <string name="focus_step">1.在微信中扫描下面二维码，关注Vocal Chain公众号\n2.依次选择“领取”-“APP任务”即可获得验证码\n3.在下方输入验证码，提交成功后即可领取VOC</string>
    <string name="please_input">请输入6位验证码</string>
    <string name="sure">确定</string>
    <string name="get_cofirm_code">发送验证码</string>
    <string name="invite_labelText">现在邀请好友即送3000voc\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="copy_inviteText">2018最落地，区块链+智能语音大数据场景应用。比特币挖矿模式，拒绝传销，拒绝虚拟矿机，社区成员多劳多得。个人语音就能挖矿，打造去中心全球公有语音大数据库。已和国内知名语音识别公司展开合作，市场千亿市值，注册即送1998VOC，一枚价值0.1元，每天朗读15分钟，轻松获得2000币，价值200元。立刻下载：http://www.vochain.world/user/index/htmlregist.html?invite_code=41</string>
    <string name="default_file_name">voc</string>
    <string name="The_ether_square">请勿绑定非以太坊地址(推荐绑定imtoken、kcash)</string>
    <string name="add_the_address">添加地址</string>
    <string name="remarks">备注</string>
    <string name="Please_enter_the_remark">请自定义钱包地址名称</string>
    <string name="Please_enter_the_address">请输入地址</string>
    <string name="purse_address">钱包地址</string>
    <string name="identity_Verification">身份验证</string>
    <string name="identity_name">姓名</string>
    <string name="identity_number">身份证号码</string>
    <string name="identity_content">不会将您的身份证信息用于除身份认证以外的任何用途</string>
    <string name="detailed">收支明细</string>
    <string name="detailed_time">产矿时间</string>
    <string name="detailed_umber">挖矿数量</string>
    <string name="detailed_gengduo">没有更多啦~</string>
    <string name="real_name">实名认证</string>

    <string name="phone">请输入手机号</string>
    <string name="phone_code">请输入手机验证码</string>
    <string name="username">请输入本人姓名</string>
    <string name="id_card">请输入本人身份证</string>
    <string name="ok">确定</string>
    <string name="haoma">+&#160;86</string>
    <string name="xuan_ze">请选择钱包地址</string>
    <string name="Ming_Xi">收支明细</string>
    <string name="Ti_Xian">我们将赠送0.0001eth给首个提现的钱包地址中</string>
    <string name="shuo_ming">获得的VOC初始为锁定状态，自获\n得日后满一个月，变为可提现状态</string>
    <string name="login_psw">切换到密码登录</string>
    <string name="login_code">切换到验证码登录</string>
    <string name="login_psw_hint">请输入密码（至少6位数）</string>
    <string name="login_psw_hint_code">请输入验证码</string>
    <string name="login_phone_hint">请输入正确的手机号</string>
    <string name="sq_ewm">点击上方二维码保存</string>
    <string name="newest_A">怎么快速获取VOC币教程</string>
    <string name="newest_A1">进入APP主页，点击语音挖矿，进入语音</string>
    <string name="newest_A2">挖矿界面</string>
    <string name="newest_A3">第1步：</string>
    <string name="newest_A4">第2步：</string>
    <string name="newest_A5">按住麦克风，</string>
    <string name="newest_A6">用普通话以匀语速念出口令，</string>
    <string name="newest_A7">即可获得VOC币</string>
    <string name="newest_A8">进入APP主页，点击任务挖币按钮，进入任务</string>
    <string name="newest_A9">挖矿界面</string>
    <string name="newest_A10">完成基本任务和超级任务</string>
    <string name="newest_A11">下的各个模块任务，</string>
    <string name="newest_A12">即可获得VOC币</string>
    <string name="str_yaoqing">2018最落地，区块链+智能语音大数据场景应用。比特币挖矿模式，拒绝传销，拒绝虚拟矿机，社区成员多劳多得。个人语音就能挖矿，打造去中心全球公有语音大数据库。已和国内知名语音识别公司展开合作，市场千亿市值，注册即送1350VOC，一枚价值0.1元，每天朗读15分钟，轻松获得2000币，价值200元。立刻下载：http://www.vochain.world/user/index/htmlregist.html?invite_code=</string>
    <string name="infor_one">VOC是VOC语音链用户提供标注语音数据的证明，是VOC用户提供数据的奖励，也是换取标注语音数据的货币。
</string>
    <string name="infor_two">VOC基于区块链加密存储技术，帮助您管理您所产生的语音数据，使之变现，并为己所有。</string>
</resources>
