<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:fitsSystemWindows="true"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#000"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/address_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:src="@mipmap/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_the_address"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/remarks"
                    android:textColor="@color/color_454545"
                    android:textSize="15dp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="0.1dp" />

                <EditText
                    android:layout_marginRight="10dp"
                    android:id="@+id/address_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:maxLength="100"
                    android:hint="@string/Please_enter_the_remark"
                    android:textSize="12dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:background="@color/qlColorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/purse_address"
                    android:textColor="@color/color_454545"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/address_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/Please_enter_the_address"
                    android:maxLength="42"
                    android:textSize="12dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:background="@color/qlColorDivider" />

            <Button
                android:id="@+id/address_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_tachevent"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/The_ether_square"
                android:textColor="@color/color_FFC3C1C1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="150dp"
                android:background="@color/qlColorDivider" />

            <WebView
                android:id="@+id/address_Web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></WebView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
