<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/she_qu_bg">

        <View
            android:id="@+id/as"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RelativeLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/as"
            android:background="#313131"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:src="@mipmap/retun" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/join_community"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_title"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:lineSpacingExtra="-12dp"
                        android:paddingBottom="15dp"
                        android:text="@string/community_text"
                        android:textColor="#F6D89F"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/join_step"
                        android:textColor="#4E422B"
                        android:textSize="15sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="179dp"
                    android:layout_height="179dp"
                    android:layout_margin="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sq_ewm"
                    android:textColor="#635D55"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_yanzhengma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_task_edit"
                    android:gravity="center"
                    android:hint="@string/please_input"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="#FF757066"
                    android:textColorHint="#FFD1C9BA" />

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="286dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/sq_btn_false"
                    android:gravity="center"
                    android:text="@string/sure"
                    android:textColor="#FFF6ED"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/msubit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="*注：每人仅有一次机会"
                    android:textColor="#A3A1A1"
                    android:textSize="12sp" />
                <!--<ImageView-->
                <!--android:id="@+id/iv_img"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="100dp"-->
                <!--android:layout_margin="10dp" />-->
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</LinearLayout>